# vector-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a2a.json  compose.test.yml  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  opencode.json  pyproject.toml  requirements.txt  vulture_whitelist.py
.github/workflows/: docs.yml  pipeline.yml
.security/: security-contract.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.test.yml  compose.yml  debug.Dockerfile  mcp.compose.yml  test-db.env
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
legacy_readme/: index.html
overview/: index.html
scripts/: debug_embedding.py  debug_full.py  debug_pg.py  investigate_timeout.py  security_contract.py  test_embedding.py  validate_agents.py  validate_all_dbs.py  verify_deps.py
search/: search_index.json
tests/: README.md  TEST_RESULTS.md  conftest.py  reproduce_chunking.py  test_action_discovery.py  test_agent_server.py  test_all_backends.py  test_auth.py  test_concept_parity.py  test_database_transport_security.py  test_databases.py  test_doctor.py  test_document_inputs.py  test_hybrid_implementation.py  test_identity_scoped_resources.py  test_init_dynamics.py  test_mcp_server.py  test_optional_dependencies.py  test_optional_dependency_boundary.py  test_package.py  test_protocol_compliance.py  test_pruning.py  test_retrievers.py  test_secure_backends.py  test_vector_api.py  test_vector_mcp.py  test_vectordbs_mock.py
vector_mcp/: __init__.py  __main__.py  agent.py  agent_server.py  auth.py  backend_policy.py  base.py  bundled_mcp.json  chromadb.py  couchbase.py  doctor.py  document_inputs.py  mcp.py  mcp_config.json  mcp_server.py  mongodb.py  pgvector.py  qdrant.py  tools.py  utils.py  vector_a2a.py  vector_agent.py  vector_api.py  vector_mcp.py
vector_mcp/agent/: IDENTITY.md
vector_mcp/agent_data/: CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
vector_mcp/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
vector_mcp/mcp/: __init__.py  mcp_collection_management.py  mcp_search.py
vector_mcp/ontology/: __init__.py  certification.json  vector.ttl
vector_mcp/ontology/fixtures/: records.json
vector_mcp/ontology/mappings/: source.yaml
vector_mcp/ontology/migrations/: manifest.json
vector_mcp/ontology/shapes/: connector.shacl.ttl
vector_mcp/prompts/: main_agent.json  retrieval_specialist.json
vector_mcp/retriever/: __init__.py  chromadb_retriever.py  couchbase_retriever.py  epistemic_graph_retriever.py  llamaindex_retriever.py  mongodb_retriever.py  pgvector_retriever.py  postgres_retriever.py  qdrant_retriever.py  retriever.py
vector_mcp/skills/vector-backend-operations/: SKILL.md
vector_mcp/skills/vector-collection-management/: SKILL.md
vector_mcp/skills/vector-hybrid-search/: SKILL.md
vector_mcp/skills/vector-mcp-collection-management/: SKILL.md
vector_mcp/skills/vector-mcp-operations/: SKILL.md
vector_mcp/skills/vector-mcp-operations/agents/: openai.yaml
vector_mcp/skills/vector-mcp-operations/references/: catalog.md
vector_mcp/skills/vector-mcp-retrieve/: SKILL.md
vector_mcp/skills/vector-mcp-search/: SKILL.md
vector_mcp/skills/vector-starter/: SKILL.md
vector_mcp/vectordb/: __init__.py  base.py  chromadb.py  couchbase.py  db_utils.py  epistemic_graph.py  mongodb.py  pgvector.py  postgres.py  qdrant.py  utils.py
