[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "vector-mcp"
version = "2.1.0"
description = "Integrate RAG into AI Agents via MCP Server. Supports multiple Vector database technologies."
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11"
dependencies = [ "agent-utilities[embeddings-openai,mcp]>=1.0.0", "epistemic-graph>=2.7.0", "markdownify>=1.2.2", "beautifulsoup4>=4.14.3", "ebooklib>=0.20", "html2text>=2025.4.15", "ipython>=1.0.0", "pypdf>=6.7.2", "protobuf>=6.33.5", "llama-index-core>=0.14.15", "llama-index-llms-langchain>=0.7.2", "llama-index-readers-file>=0.5.6",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
epistemic-graph = [ "epistemic-graph>=2.7.0",]
postgres = [ "psycopg>=3.3.3", "llama-index-vector-stores-postgres>=0.8.1",]
chromadb = [ "chromadb>=1.5.1", "llama-index-vector-stores-chroma>=0.5.5", "opentelemetry-api>=1.39.1", "opentelemetry-sdk>=1.39.1", "opentelemetry-exporter-otlp>=1.39.1",]
couchbase = [ "couchbase>=4.5.0", "llama-index-vector-stores-couchbase>=0.6.0",]
qdrant = [ "qdrant-client>=1.16.2", "fastembed>=0.7.4", "llama-index-vector-stores-qdrant>=0.9.1",]
mongodb = [ "pymongo>=1.0.0", "llama-index-vector-stores-mongodb>=0.9.1",]
huggingface = [ "llama-index-embeddings-huggingface>=0.6.1", "sentence_transformers>=5.2.2",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0",]
all = [ "vector-mcp[mcp,epistemic-graph,postgres,chromadb,couchbase,qdrant,mongodb,huggingface,agent]>=2.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
vector-mcp = "vector_mcp.mcp_server:mcp_server"
vector-agent = "vector_mcp.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
vector-mcp = "vector_mcp.skills"

[project.entry-points."agent_utilities.ontology_providers"]
vector-mcp = "vector_mcp.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
vector-mcp = "vector_mcp.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
vector-mcp = "vector_mcp.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
vector_mcp = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
