[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "vector-mcp"
version = "2.1.2"
description = "Governed vector retrieval over native epistemic-graph and secure opt-in providers."
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11"
dependencies = [ "agent-utilities[embeddings-openai,mcp]>=1.27.1,<2.0.0", "markdownify>=1.2.2", "beautifulsoup4>=4.14.3", "ebooklib>=0.20", "html2text>=2025.4.15", "ipython>=1.0.0", "pypdf>=6.7.2", "protobuf>=6.33.5", "llama-index-core>=0.14.15", "llama-index-readers-file>=0.5.6",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@example.invalid"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
postgres = [ "psycopg[pool]>=3.3.3",]
qdrant = [ "qdrant-client>=1.16.2",]
mongodb = [ "pymongo>=4.11.0",]
huggingface = [ "agent-utilities[embeddings-huggingface]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,langfuse,logfire]>=1.27.1,<2.0.0",]
all = [ "vector-mcp[mcp,postgres,qdrant,mongodb,huggingface,agent]>=2.1.2",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
vector-mcp = "vector_mcp.mcp_server:mcp_server"
vector-agent = "vector_mcp.agent_server:agent_server"
vector-mcp-doctor = "vector_mcp.doctor:main"

[project.entry-points."agent_utilities.skill_providers"]
vector-mcp = "vector_mcp.skills"

[project.entry-points."agent_utilities.ontology_providers"]
vector-mcp = "vector_mcp.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
vector-mcp = "vector_mcp.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
vector-mcp = "vector_mcp.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
vector_mcp = [ "bundled_mcp.json", "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
